<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.WelcomeFragment"
        android:label="@string/welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.InstructionsFragment"
        android:label="@string/instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoesListFragment"
            app:destination="@id/shoesListFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoesListFragment"
        android:name="com.udacity.shoestore.shoe.ShoesListFragment"
        android:label="@string/shoes_list" >
        <action
            android:id="@+id/action_shoesListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.shoe.ShoeDetailFragment"
        android:label="ShoeDetailFragment" >
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoesListFragment"
            app:destination="@id/shoesListFragment" />
        <argument
            android:name="shoe"
            app:argType="com.udacity.shoestore.models.Shoe"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>